--- a/en/index.html
+++ b/en/index.html
@@ -30,7 +30,6 @@
       color:#111;
     }
 
-    /* Minimal page content */
     header{
       padding: 26px 28px 12px;
       border-bottom: 1px solid #eee;
@@ -46,7 +45,6 @@
       max-width: 960px;
     }
 
-    /* Floating chat shell */
     .chat-shell{
       position: fixed;
       right: var(--gap);
@@ -54,7 +52,6 @@
       z-index: 9999;
     }
 
-    /* Popup window */
     #chatbot-popup{
       width: var(--chat-width);
       height: var(--chat-height);
@@ -68,7 +65,6 @@
     }
     #chatbot-popup.visible{ display:block; }
 
-    /* Header bar */
     #chatbot-header{
       height: var(--header-height);
       background: var(--brand);
@@ -115,13 +111,35 @@
     .icon-button:hover{ background: rgba(255,255,255,.12); }
     .icon-button:focus{ outline: 3px solid rgba(255,255,255,.35); outline-offset: 2px; }
 
-    /* Webchat host */
+    /* Small PII banner */
+    .pii-banner{
+      font-size: 12px;
+      line-height: 1.35;
+      padding: 8px 12px;
+      border-bottom: 1px solid #eee;
+      background: #fafafa;
+      color: #333;
+    }
+
     #webchat{
-      height: calc(100% - var(--header-height));
+      height: calc(100% - var(--header-height) - 44px); /* header + pii banner */
       background: #fff;
     }
 
-    /* Launcher button */
+    /* Simple error panel in-widget */
+    #chat-error{
+      display:none;
+      padding: 12px;
+      font-size: 13px;
+      color: #111;
+      background: #fff3f3;
+      border-bottom: 1px solid #ffd0d0;
+    }
+    #chat-error code{
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace;
+      font-size: 12px;
+    }
+
     #open-chat{
       width: 64px;
       height: 64px;
@@ -135,16 +153,13 @@
       justify-content:center;
       padding: 0;
     }
-    #open-chat.hidden{
-      display:none;
-    }
+    #open-chat.hidden{ display:none; }
     #open-chat img{
       width: 30px;
       height: 30px;
       display:block;
     }
 
-    /* Mobile: fullscreen chat */
     @media (max-width: 768px){
       #chatbot-popup{
         width: calc(100vw - (var(--gap) * 2));
@@ -164,17 +179,30 @@
   </style>
 
   <script>
-    // ============================================================
-    // REQUIRED: Replace this placeholder with your token endpoint
-    // Example shape is something like:
-    // https://<env>.api.powerplatform.com/powervirtualagents/bots/<botId>/directline/token?api-version=2022-03-01-preview
-    // ============================================================
-    const tokenEndpoint = "https://bd8b80b56a19e41ba78d4fa1f1c4cd.f3.environment.api.powerplatform.com/powervirtualagents/botsbyschema/crd8f_gacAgentUc02/directline/token?api-version=2022-03-01-preview";
+    // ------------------------------------------------------------
+    // CONFIG
+    // ------------------------------------------------------------
+    const evaIconUrl =
+      "https://tcs-akamai-stage.tradecommissioner.gc.ca/etc.clientlibs/tcs/clientlibs/clientlib-site/resources/assets/chatbot/chatbot.png";
 
-    // Your icon (also used in header)
-    const evaIconUrl = "https://tcs-akamai-stage.tradecommissioner.gc.ca/etc.clientlibs/tcs/clientlibs/clientlib-site/resources/assets/chatbot/chatbot.png";
+    // Prefer passing tokenEndpoint via querystring to avoid committing it:
+    //   ?tokenEndpoint=https%3A%2F%2F...%2Fdirectline%2Ftoken%3Fapi-version%3D...
+    // Fallback placeholder for local testing.
+    const TOKEN_ENDPOINT_PLACEHOLDER = "https://bd8b80b56a19e41ba78d4fa1f1c4cd.f3.environment.api.powerplatform.com/powervirtualagents/botsbyschema/crd8f_gacAgentUc02/directline/token?api-version=2022-03-01-preview";
 
-    // Keep a working styleOptions, but you can trim later
+    function getTokenEndpointFromQuery() {
+      const params = new URLSearchParams(window.location.search);
+      const te = params.get("tokenEndpoint");
+      return te && te.trim() ? te.trim() : null;
+    }
+
+    function resolveTokenEndpoint() {
+      const fromQuery = getTokenEndpointFromQuery();
+      if (fromQuery) return fromQuery;
+      return TOKEN_ENDPOINT_PLACEHOLDER;
+    }
+
+    // WebChat styling (keep it minimal; you can expand later)
     const styleOptions = {
       accent: "#0078D4",
       backgroundColor: "#ffffff",
@@ -194,30 +222,73 @@
       hideUploadButton: false
     };
 
+    // ------------------------------------------------------------
+    // STATE
+    // ------------------------------------------------------------
     let directLineUrl = null;
+    let isInitialized = false;
+    const STORAGE_KEY_OPEN = "eva_chat_open_v1";
 
+    // ------------------------------------------------------------
+    // UI HELPERS
+    // ------------------------------------------------------------
     function showChat() {
       document.getElementById("chatbot-popup").classList.add("visible");
       document.getElementById("open-chat").classList.add("hidden");
+      sessionStorage.setItem(STORAGE_KEY_OPEN, "1");
+
+      // Lazy init on first open
+      if (!isInitialized) {
+        initializeChat().catch(() => {/* errors surfaced in widget */});
+      }
     }
+
     function hideChat() {
       document.getElementById("chatbot-popup").classList.remove("visible");
       document.getElementById("open-chat").classList.remove("hidden");
+      sessionStorage.setItem(STORAGE_KEY_OPEN, "0");
     }
 
+    function setError(message, details) {
+      const el = document.getElementById("chat-error");
+      el.style.display = "block";
+      el.innerHTML =
+        `<strong>Chat could not start.</strong><div style="margin-top:6px">${escapeHtml(message)}</div>` +
+        (details ? `<div style="margin-top:8px"><code>${escapeHtml(details)}</code></div>` : "");
+    }
+
+    function clearError() {
+      const el = document.getElementById("chat-error");
+      el.style.display = "none";
+      el.innerHTML = "";
+    }
+
+    function escapeHtml(str) {
+      return String(str).replace(/[&<>"']/g, s => ({
+        "&": "&amp;", "<": "&lt;", ">": "&gt;", '"': "&quot;", "'": "&#039;"
+      }[s]));
+    }
+
+    // ------------------------------------------------------------
+    // BOT/WEBCHAT LOGIC
+    // ------------------------------------------------------------
     function createCustomStore() {
       return window.WebChat.createStore(
         {},
         ({ dispatch }) => (next) => (action) => {
           if (action.type === "DIRECT_LINE/CONNECT_FULFILLED") {
+            // Language lock + start event
             dispatch({
               type: "DIRECT_LINE/POST_ACTIVITY",
               meta: { method: "keyboard" },
               payload: {
                 activity: {
-                  channelData: { postBack: true },
+                  type: "event",
                   name: "startConversation",
-                  type: "event"
+                  channelData: {
+                    postBack: true,
+                    language: "en"   // <— language lock for this EN page
+                  }
                 }
               }
             });
@@ -241,20 +312,28 @@
       return `${environmentEndPoint}/powervirtualagents/regionalchannelsettings?api-version=${apiVersion}`;
     }
 
+    async function getConversationToken(tokenEndpoint) {
+      const res = await fetch(tokenEndpoint, { cache: "no-store" });
+      const info = await res.json();
+      if (!info || !info.token) throw new Error("Token endpoint did not return a token.");
+      return info.token;
+    }
+
     async function restartConversation() {
       try {
-        if (!directLineUrl) {
-          console.error("DirectLine URL not initialized.");
-          return;
+        clearError();
+        const tokenEndpoint = resolveTokenEndpoint();
+
+        if (!directLineUrl) throw new Error("DirectLine URL not initialized yet.");
+        if (!tokenEndpoint || tokenEndpoint.includes("{{TOKEN_ENDPOINT_URL}}")) {
+          throw new Error("tokenEndpoint is not set. Provide ?tokenEndpoint=... or replace the placeholder.");
         }
 
-        const res = await fetch(tokenEndpoint);
-        const info = await res.json();
-        if (!info.token) throw new Error("Failed to get conversation token.");
+        const token = await getConversationToken(tokenEndpoint);
 
         const newDirectLine = window.WebChat.createDirectLine({
           domain: `${directLineUrl}v3/directline`,
-          token: info.token
+          token
         });
 
         window.WebChat.renderWebChat(
@@ -262,53 +341,68 @@
           document.getElementById("webchat")
         );
       } catch (e) {
-        console.error("Failed to restart conversation:", e);
+        console.error("Restart failed:", e);
+        setError("Please set a valid token endpoint, then try again.", e?.message || String(e));
       }
     }
 
     async function initializeChat() {
       try {
-        if (!tokenEndpoint || tokenEndpoint.includes("{{TOKEN_ENDPOINT_URL}}") || tokenEndpoint.includes("ENTER ENDPOINT HERE")) {
-          console.error("Set tokenEndpoint to a valid URL before testing.");
-          return;
+        clearError();
+        const tokenEndpoint = resolveTokenEndpoint();
+
+        if (!tokenEndpoint || tokenEndpoint.includes("{{TOKEN_ENDPOINT_URL}}")) {
+          throw new Error("tokenEndpoint is not set. Provide ?tokenEndpoint=... or replace the placeholder.");
         }
 
-        const regionalChannelSettingsURL = getRegionalChannelSettingsURL(tokenEndpoint);
+        const regionalURL = getRegionalChannelSettingsURL(tokenEndpoint);
 
-        const settingsRes = await fetch(regionalChannelSettingsURL);
+        const settingsRes = await fetch(regionalURL, { cache: "no-store" });
         const settings = await settingsRes.json();
 
         directLineUrl = settings?.channelUrlsById?.directline;
-        if (!directLineUrl) throw new Error("Failed to get DirectLine URL from regional channel settings.");
+        if (!directLineUrl) throw new Error("Could not resolve Direct Line regional URL.");
 
-        const tokenRes = await fetch(tokenEndpoint);
-        const info = await tokenRes.json();
-        if (!info.token) throw new Error("Failed to get conversation token.");
+        const token = await getConversationToken(tokenEndpoint);
 
         const directLine = window.WebChat.createDirectLine({
           domain: `${directLineUrl}v3/directline`,
-          token: info.token
+          token
         });
 
         window.WebChat.renderWebChat(
           { directLine, styleOptions, store: createCustomStore() },
           document.getElementById("webchat")
         );
+
+        isInitialized = true;
       } catch (e) {
-        console.error("Failed to initialize chat:", e);
+        console.error("Initialize failed:", e);
+        setError("Chat initialization failed.", e?.message || String(e));
       }
     }
 
-    // Start immediately (renders into the hidden popup; opens when user clicks)
+    // ------------------------------------------------------------
+    // BOOTSTRAP
+    // ------------------------------------------------------------
     window.addEventListener("DOMContentLoaded", () => {
-      // set header icon
-      const icon = document.getElementById("evaIcon");
-      if (icon) icon.src = evaIconUrl;
+      // Set icons
+      document.getElementById("evaIcon").src = evaIconUrl;
+      document.getElementById("evaLauncherIcon").src = evaIconUrl;
 
-      const launcherIcon = document.getElementById("evaLauncherIcon");
-      if (launcherIcon) launcherIcon.src = evaIconUrl;
+      // Restore open/closed state for this tab session
+      const wasOpen = sessionStorage.getItem(STORAGE_KEY_OPEN) === "1";
+      if (wasOpen) {
+        showChat();
+      }
 
-      initializeChat();
+      // ESC closes when open
+      document.addEventListener("keydown", (e) => {
+        if (e.key === "Escape") {
+          const visible = document.getElementById("chatbot-popup").classList.contains("visible");
+          if (visible) hideChat();
+        }
+      });
     });
   </script>
 </head>
@@ -319,7 +413,7 @@
   </header>
 
   <main>
-    <p>This is a minimal prototype page. Use the chat launcher in the bottom-right to open Eva.</p>
+    <p>English prototype page. Use the chat launcher in the bottom-right.</p>
   </main>
 
   <div class="chat-shell" aria-live="polite">
@@ -330,14 +424,16 @@
           <span>Chat with Eva</span>
         </div>
         <div class="header-buttons">
-          <button class="icon-button" type="button" onclick="restartConversation()" aria-label="Restart conversation">
-            ↻
-          </button>
-          <button class="icon-button" type="button" onclick="hideChat()" aria-label="Close chat">
-            ×
-          </button>
+          <button class="icon-button" type="button" onclick="restartConversation()" aria-label="Restart conversation">↻</button>
+          <button class="icon-button" type="button" onclick="hideChat()" aria-label="Close chat">×</button>
         </div>
       </div>
+
+      <div class="pii-banner">
+        Please do not include personal, sensitive, or confidential information in this chat.
+      </div>
+
+      <div id="chat-error" role="status" aria-live="polite"></div>
       <div id="webchat" role="main"></div>
     </div>
 
